http: Fixed java.net.URL deprecations in modern JDK